@@ -1917,7 +1917,11 @@ always hide."
 				'string<))))
 		    (gnus-article-hide-header "reply-to")))))
 	     ((eq elem 'date)
-	      (let ((date (message-fetch-field "date")))
+	      (let ((date (with-current-buffer gnus-original-article-buffer
+			    ;; If date in `gnus-article-buffer' is localized
+			    ;; (`gnus-treat-date-user-defined'),
+			    ;; `days-between' might fail.
+			    (message-fetch-field "date"))))
 		(when (and date
 			   (< (days-between (current-time-string) date)
 			      4))
