@@ -423,7 +423,9 @@ See the documentation for that variable."
 	      (p3) (p4))
 	  (search-backward "<" (point-min) t)
 	  (setq p1 (point))
-	  (re-search-forward (format "</%s>" tag) (point-max) t)
+	  (unless (search-forward (format "</%s>" tag) (point-max) t)
+	    (goto-char p2)
+	    (insert (format "</%s>" tag)))
 	  (setq p4 (point))
 	  (search-backward "</" (point-min) t)
 	  (setq p3 (point))
